--- a/src/app/src/main/res/menu/nav_menu.xml
+++ b/src/app/src/main/res/menu/nav_menu.xml
@@ -2,34 +2,37 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="co.vecmocon.MainActivity">
+    tools:context=".MainActivity">
 
-    <item
-        android:id="@+id/nav_Home"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="@string/nav_homeText" />
-    <item
-        android:id="@+id/nav_Trainings"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="@string/nav_trainingsText" />
-    <item
-        android:id="@+id/nav_Weight"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="@string/nav_weightText" />
-    <item
-        android:id="@+id/nav_Figure"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="@string/nav_figureText" />
-    <item
-        android:id="@+id/nav_History"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="@string/nav_trainings_historyText" />
-    <item
-        android:id="@+id/nav_ExercisesDb"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="@string/nav_exercieDbText" />
-    <item
-        android:id="@+id/nav_about"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="@string/nav_aboutText" />
+    <group android:checkableBehavior="single">
+<!--     Todo: Check icons and add neccessary icons to project and implement into menu   -->
+        <item
+            android:id="@+id/nav_Home"
+            android:icon="@drawable/ic_launcher_background"
+            android:title="@string/nav_homeText" />
+        <item
+            android:id="@+id/nav_Trainings"
+            android:icon="@drawable/ic_launcher_background"
+            android:title="@string/nav_trainingsText" />
+        <item
+            android:id="@+id/nav_Weight"
+            android:icon="@drawable/ic_launcher_background"
+            android:title="@string/nav_weightText" />
+        <item
+            android:id="@+id/nav_Figure"
+            android:icon="@drawable/ic_launcher_background"
+            android:title="@string/nav_figureText" />
+        <item
+            android:id="@+id/nav_History"
+            android:icon="@drawable/ic_launcher_background"
+            android:title="@string/nav_trainings_historyText" />
+        <item
+            android:id="@+id/nav_ExercisesDb"
+            android:icon="@drawable/ic_launcher_background"
+            android:title="@string/nav_exercieDbText" />
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/information"
+            android:title="@string/nav_aboutText" />
+    </group>
 </menu>
