--- a/src/app/src/main/res/values/themes.xml
+++ b/src/app/src/main/res/values/themes.xml
@@ -7,5 +7,6 @@
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:fontFamily">@font/default_font_family</item>
     </style>
 </resources>
