--- a/src/app/src/main/res/layout/fragment_main.xml
+++ b/src/app/src/main/res/layout/fragment_main.xml
@@ -36,5 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/nav_menu"/>
+        app:menu="@menu/nav_menu"
+        android:background="@color/dark"
+        app:itemTextColor="@color/purple_200"
+        app:itemIconTint="@color/white"/>
+
 </androidx.drawerlayout.widget.DrawerLayout>
