Add categories images. Add system to save static categories images and dynamic urls. Implement categories into application. Change design of single category. Modify prepopulated database to match app needs

--- a/src/app/src/main/res/layout/single_exercise_category.xml
+++ b/src/app/src/main/res/layout/single_exercise_category.xml
@@ -28,7 +28,7 @@
         android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/btnGoIntoCategory"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/ivCategoryImage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -40,6 +40,6 @@
         android:text="@string/open_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/ivCategoryImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
